# personal_python_project_generator

./: .gitignore  CHANGELOG.md  README.md  cookiecutter.json  pyproject.toml
.github/: dependabot.yml
.github/workflows/: on_pull_request_closed.yml
hooks/: post_gen_project.py  pre_gen_project.py
{{cookiecutter.project_name}}/: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.tests.yml  docker-compose.yml  pyproject.toml
{{cookiecutter.project_name}}/.github/: dependabot.yml
{{cookiecutter.project_name}}/.github/workflows/: lock_dependencies.yml  on_pull_request_closed.yml  on_pull_request_commit.yml
{{cookiecutter.project_name}}/.run/: docker-compose tests.run.xml  docker-compose.run.xml
{{cookiecutter.project_name}}/app/: clients.py  config.py  main.py
{{cookiecutter.project_name}}/hooks/: pre-commit  pre-push
{{cookiecutter.project_name}}/scripts/: dump_db.sh  generate_notes.sh  mongo-init.js
{{cookiecutter.project_name}}/tests/: clients_test.py  conftest.py
