[project]
name = "personal-python-project-generator"
version = "1.0.0"
description = "My personal Python project generator"
authors = [
    { name = "Maxime Houé", email = "maxhoue@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cookiecutter>=2.6.0",
]

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["hooks*"]

[tool.semantic_release]
version_toml = [
    "pyproject.toml:project.version",
]

[dependency-groups]
dev = [
    "python-semantic-release>=10.0.2",
]
