[tool.poetry]
name = "{{cookiecutter.project_name}}"
version = "0.0.0"
description = "{{cookiecutter.description}}"
authors = ["{{cookiecutter.author_name}} <{{cookiecutter.author_email}}>"]
readme = "README.md"
repository = "https://github.com/maxime-houe/{{cookiecutter.project_name}}"

[[tool.poetry.source]]
name = 'pypi_'
url = 'https://pypi.org/simple'

[tool.poetry.dependencies]
python = "^{{cookiecutter.python_version}}"
pydantic = "^2.4.2"
pydantic-settings = "^2.0.3"
{% if cookiecutter.use_mongo == 'y' -%}pymongo = { version = "^4.3.3", source = "pypi_", extras = ["srv"] }{% endif %}

[tool.poetry.group.tests]
optional = true

[tool.poetry.group.tests.dependencies]
hypothesis = "^6.70.0"
pytest = "^7.2.1"
pytest-cov = "^4.0.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
python-semantic-release = "^8.3.0"

[tool.pytest.ini_options]
python_files = ["*_test.py"]
markers = [
    "integration",
    "unit",
]
[tool.semantic_release]
version_variables = [
    "app/config.py:__version__",
]
version_toml = [
    "pyproject.toml:tool.poetry.version",
]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
