[project]
name = "{{cookiecutter.project_name}}"
version = "0.1.0"
description = "{{cookiecutter.description}}"
authors = [
    { name = "{{cookiecutter.author_name}}", email = "{{cookiecutter.author_email}}" }
]
readme = "README.md"
requires-python = ">={{cookiecutter.python_version}}"

dependencies = [
    "pydantic>=2.11.4",
    "pydantic-settings>=2.9.1",
    {% if cookiecutter.add_mongo_support == 'y' -%}"pymongo[srv]>=4.3.3"{% endif %}
]

[dependency-groups]
dev = [
  "hypothesis>=6.133.0",
  "pytest>=8.3.5",
  "pytest-cov>=6.1.1",
]

[tool.pydantic]
model_config = { use_enum_values = true }

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["hooks*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
python_files = ["*_test.py"]
markers = [
    "integration",
    "unit",
]

[tool.semantic_release]
version_variables = [
    "app/config.py:__version__",
]
version_toml = [
    "pyproject.toml:project.version",
]
